// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/vsts/helpers getChanges should be get the commit obj formated (file to create) 1`] = `
Array [
  Object {
    "changeType": 1,
    "item": Object {
      "path": "./myFilePath/test",
    },
    "newContent": Object {
      "Content": "Hello world!",
      "ContentType": 0,
    },
  },
]
`;

exports[`platform/vsts/helpers getChanges should be get the commit obj formated (file to update) 1`] = `
Array [
  Object {
    "changeType": 2,
    "item": Object {
      "path": "./myFilePath/test",
    },
    "newContent": Object {
      "Content": "Hello world!",
      "ContentType": 0,
    },
  },
]
`;

exports[`platform/vsts/helpers getCommitDetails should get commit details 1`] = `
Object {
  "parents": Array [
    "123456",
  ],
}
`;

exports[`platform/vsts/helpers getFile should return the file content because it is not a json 1`] = `"{\\"hello\\"= \\"test\\"}"`;

exports[`platform/vsts/helpers getProjectAndRepo should return the object with project and repo 1`] = `
Object {
  "project": "prjName",
  "repo": "myRepoName",
}
`;

exports[`platform/vsts/helpers getProjectAndRepo should return the object with same strings 1`] = `
Object {
  "project": "myRepoName",
  "repo": "myRepoName",
}
`;

exports[`platform/vsts/helpers getRef should get the ref 1`] = `
Array [
  Object {
    "objectId": 132,
  },
]
`;

exports[`platform/vsts/helpers getRef should get the ref 2`] = `
Array [
  Object {
    "objectId": "132",
  },
]
`;

exports[`platform/vsts/helpers getRenovatePRFormat should be formated (closed v2) 1`] = `
Object {
  "canRebase": true,
  "displayNumber": "Pull Request #undefined",
  "number": undefined,
  "status": "merged",
}
`;

exports[`platform/vsts/helpers getRenovatePRFormat should be formated (closed) 1`] = `
Object {
  "canRebase": true,
  "displayNumber": "Pull Request #undefined",
  "number": undefined,
  "status": "closed",
}
`;

exports[`platform/vsts/helpers getRenovatePRFormat should be formated (isUnmergeable) 1`] = `
Object {
  "canRebase": true,
  "displayNumber": "Pull Request #undefined",
  "isUnmergeable": true,
  "mergeStatus": 2,
  "number": undefined,
  "status": "open",
}
`;

exports[`platform/vsts/helpers getRenovatePRFormat should be formated (not closed) 1`] = `
Object {
  "canRebase": true,
  "displayNumber": "Pull Request #undefined",
  "number": undefined,
  "status": "open",
}
`;

exports[`platform/vsts/helpers getVSTSBranchObj should be the branch object formated 1`] = `
Object {
  "name": "refs/heads/branchName",
  "oldObjectId": "132",
}
`;

exports[`platform/vsts/helpers getVSTSBranchObj should be the branch object formated 2`] = `
Object {
  "name": "refs/heads/branchName",
  "oldObjectId": "0000000000000000000000000000000000000000",
}
`;

exports[`platform/vsts/helpers max4000Chars should be the same 1`] = `"Hello"`;
